--- a/usr.bin/dc/Makefile
+++ b/usr.bin/dc/Makefile
@@ -1,10 +1,8 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/usr.bin/dc/Makefile 227299 2011-11-07 09:42:22Z ed $
+#	$FreeBSD: stable/11/usr.bin/dc/Makefile 275042 2014-11-25 14:29:10Z bapt $
 #	$OpenBSD: Makefile,v 1.2 2006/11/26 11:31:09 deraadt Exp $
 
 PROG=	dc
 SRCS=	dc.c bcode.c inout.c mem.c stack.c
-DPADD=	${LIBCRYPTO}
-LDADD=	-lcrypto
+LIBADD=	crypto
 
 .include <bsd.prog.mk>
