--- a/usr.bin/ctags/Makefile
+++ b/usr.bin/ctags/Makefile
@@ -1,5 +1,5 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/ctags/Makefile 201784 2010-01-08 11:16:58Z dwmalone $
 
 PROG=	ctags
 SRCS=	C.c ctags.c fortran.c lisp.c print.c tree.c yacc.c
