--- a/usr.bin/cut/Makefile
+++ b/usr.bin/cut/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/cut/Makefile 276490 2015-01-01 02:04:44Z ngie $
+# $FreeBSD: stable/11/usr.bin/cut/Makefile 272783 2014-10-09 01:46:31Z ngie $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	cut
 
