--- a/usr.bin/cut/tests/Makefile
+++ b/usr.bin/cut/tests/Makefile
@@ -1,19 +1,17 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/cut/tests/Makefile 313629 2017-02-11 07:11:43Z ngie $
+# $FreeBSD: stable/11/usr.bin/cut/tests/Makefile 313540 2017-02-10 07:55:39Z ngie $
 
-.include <bsd.own.mk>
+PACKAGE=	tests
 
 ATF_TESTS_SH+=	cut2_test
 NETBSD_ATF_TESTS_SH=	cut_test
 
-FILESDIR=	${TESTSDIR}
-FILES=		d_basic.out
-FILES+=		d_cut.in
-FILES+=		d_dflag.out
-FILES+=		d_dsflag.out
-FILES+=		d_latin1.in
-FILES+=		d_sflag.out
-FILES+=		d_utf8.in
+${PACKAGE}FILES=		d_basic.out
+${PACKAGE}FILES+=		d_cut.in
+${PACKAGE}FILES+=		d_dflag.out
+${PACKAGE}FILES+=		d_dsflag.out
+${PACKAGE}FILES+=		d_latin1.in
+${PACKAGE}FILES+=		d_sflag.out
+${PACKAGE}FILES+=		d_utf8.in
 
 .include <netbsd-tests.test.mk>
 
