--- a/usr.bin/killall/Makefile
+++ b/usr.bin/killall/Makefile
@@ -1,8 +1,6 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/killall/Makefile 194869 2009-06-24 18:18:35Z jamie $
+# $FreeBSD: stable/11/usr.bin/killall/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	killall
-DPADD=	${LIBJAIL}
-LDADD=	-ljail
+LIBADD=	jail
 
 .include <bsd.prog.mk>
