--- a/usr.bin/uniq/Makefile
+++ b/usr.bin/uniq/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/uniq/Makefile 314817 2017-03-07 01:52:50Z ngie $
+# $FreeBSD: stable/11/usr.bin/uniq/Makefile 314818 2017-03-07 01:52:56Z ngie $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	uniq
 
