--- a/usr.bin/ul/Makefile
+++ b/usr.bin/ul/Makefile
@@ -1,10 +1,8 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/ul/Makefile 87700 2001-12-11 23:27:23Z markm $
+# $FreeBSD: stable/11/usr.bin/ul/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	ul
 
-DPADD=	${LIBTERMCAP}
-LDADD=	-ltermcap
+LIBADD=	ncursesw
 
 .include <bsd.prog.mk>
