--- a/usr.bin/uniq/tests/Makefile
+++ b/usr.bin/uniq/tests/Makefile
@@ -1,16 +1,15 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/uniq/tests/Makefile 314817 2017-03-07 01:52:50Z ngie $
+# $FreeBSD: stable/11/usr.bin/uniq/tests/Makefile 312127 2017-01-14 06:51:31Z ngie $
+
+PACKAGE=		tests
 
 NETBSD_ATF_TESTS_SH=	uniq_test
 
-FILES+=	d_basic.in
-FILES+=	d_basic.out
-FILES+=	d_counts.out
-FILES+=	d_input.in
-FILES+=	d_show_duplicates.out
-FILES+=	d_show_uniques.out
-
-BINDIR=	${TESTSDIR}
+${PACKAGE}FILES+=	d_basic.in
+${PACKAGE}FILES+=	d_basic.out
+${PACKAGE}FILES+=	d_counts.out
+${PACKAGE}FILES+=	d_input.in
+${PACKAGE}FILES+=	d_show_duplicates.out
+${PACKAGE}FILES+=	d_show_uniques.out
 
 .include <netbsd-tests.test.mk>
 
