--- a/usr.bin/usbhidaction/Makefile
+++ b/usr.bin/usbhidaction/Makefile
@@ -1,9 +1,8 @@
-#	$MidnightBSD$
+#	$FreeBSD: stable/11/usr.bin/usbhidaction/Makefile 275042 2014-11-25 14:29:10Z bapt $
 #	$NetBSD: Makefile,v 1.4 2002/02/02 16:54:26 veego Exp $
 
 PROG=	usbhidaction
 
-LDADD=	-lusbhid
-DPADD=	${LIBUSBHID}
+LIBADD=	usbhid
 
 .include <bsd.prog.mk>
