--- a/usr.bin/usbhidctl/Makefile
+++ b/usr.bin/usbhidctl/Makefile
@@ -1,10 +1,9 @@
-# $MidnightBSD$
 #	$NetBSD: Makefile,v 1.4 1999/05/11 21:02:25 augustss Exp $
-# $FreeBSD: stable/10/usr.bin/usbhidctl/Makefile 94744 2002-04-15 09:33:34Z ru $
+# $FreeBSD: stable/11/usr.bin/usbhidctl/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	usbhidctl
 SRCS=	usbhid.c
-DPADD=	${LIBUSBHID}
-LDADD=	-lusbhid
+
+LIBADD=	usbhid
 
 .include <bsd.prog.mk>
