--- a/usr.bin/tput/Makefile
+++ b/usr.bin/tput/Makefile
@@ -1,9 +1,8 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/tput/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	tput
-DPADD=	${LIBTERMCAP}
-LDADD=	-ltermcap
+LIBADD=	ncursesw
 SCRIPTS=clear.sh
 MLINKS=	tput.1 clear.1
 
