--- a/usr.bin/tty/Makefile
+++ b/usr.bin/tty/Makefile
@@ -1,5 +1,5 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/tty/Makefile 87714 2001-12-12 00:06:52Z markm $
 
 PROG=	tty
 
