--- a/usr.bin/tr/tests/Makefile
+++ b/usr.bin/tr/tests/Makefile
@@ -1,27 +1,25 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/tr/tests/Makefile 263227 2014-03-16 08:04:06Z jmmv $
+# $FreeBSD: stable/11/usr.bin/tr/tests/Makefile 299094 2016-05-04 23:20:53Z ngie $
 
-TESTSDIR=	${TESTSBASE}/usr.bin/tr
+PACKAGE=	tests
 
 TAP_TESTS_SH=	legacy_test
 
-FILESDIR=	${TESTSDIR}
-FILES=		regress.00.out
-FILES+=		regress.01.out
-FILES+=		regress.02.out
-FILES+=		regress.03.out
-FILES+=		regress.04.out
-FILES+=		regress.05.out
-FILES+=		regress.06.out
-FILES+=		regress.07.out
-FILES+=		regress.08.out
-FILES+=		regress.09.out
-FILES+=		regress.0a.out
-FILES+=		regress.0b.out
-FILES+=		regress.0c.out
-FILES+=		regress.0d.out
-FILES+=		regress.in
-FILES+=		regress.sh
-FILES+=		regress2.in
+${PACKAGE}FILES+=		regress.00.out
+${PACKAGE}FILES+=		regress.01.out
+${PACKAGE}FILES+=		regress.02.out
+${PACKAGE}FILES+=		regress.03.out
+${PACKAGE}FILES+=		regress.04.out
+${PACKAGE}FILES+=		regress.05.out
+${PACKAGE}FILES+=		regress.06.out
+${PACKAGE}FILES+=		regress.07.out
+${PACKAGE}FILES+=		regress.08.out
+${PACKAGE}FILES+=		regress.09.out
+${PACKAGE}FILES+=		regress.0a.out
+${PACKAGE}FILES+=		regress.0b.out
+${PACKAGE}FILES+=		regress.0c.out
+${PACKAGE}FILES+=		regress.0d.out
+${PACKAGE}FILES+=		regress.in
+${PACKAGE}FILES+=		regress.sh
+${PACKAGE}FILES+=		regress2.in
 
 .include <bsd.test.mk>
