--- a/usr.bin/true/Makefile
+++ b/usr.bin/true/Makefile
@@ -1,5 +1,5 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/9/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/true/Makefile 87714 2001-12-12 00:06:52Z markm $
 
 PROG=	true
 
