--- a/usr.bin/tset/Makefile
+++ b/usr.bin/tset/Makefile
@@ -1,11 +1,10 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/9/93
+# $FreeBSD: stable/11/usr.bin/tset/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	tset
 SRCS=	map.c misc.c set.c term.c tset.c wrterm.c
 
-DPADD=	${LIBTERMCAP}
-LDADD=	-ltermcap
+LIBADD=	ncursesw
 LINKS=	${BINDIR}/tset ${BINDIR}/reset
 MLINKS=	tset.1 reset.1
 
