--- a/usr.bin/unexpand/Makefile
+++ b/usr.bin/unexpand/Makefile
@@ -1,6 +1,5 @@
-# $MidnightBSD$
 #	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/unexpand/Makefile 276486 2014-12-31 23:25:37Z ngie $
+# $FreeBSD: stable/11/usr.bin/unexpand/Makefile 264400 2014-04-13 05:21:56Z imp $
 
 PROG=	unexpand
 MAN=
