--- a/usr.bin/opiekey/Makefile
+++ b/usr.bin/opiekey/Makefile
@@ -1,18 +1,16 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/opiekey/Makefile 270120 2014-08-18 02:13:45Z ache $
+# $FreeBSD: stable/11/usr.bin/opiekey/Makefile 319186 2017-05-30 04:27:05Z ngie $
 #
-OPIE_DIST?=	${.CURDIR}/../../contrib/opie
+OPIE_DIST?=	${SRCTOP}/contrib/opie
 
 PROG=	opiekey
 
-CFLAGS+=-I${.CURDIR}/../../lib/libopie
+CFLAGS+=-I${SRCTOP}/lib/libopie
 CFLAGS+=-I${OPIE_DIST}
 CFLAGS+=-DINSECURE_OVERRIDE
 
 WARNS?=	0
 
-DPADD=	${LIBOPIE} ${LIBMD}
-LDADD=	-lopie -lmd
+LIBADD=	opie
 
 LINKS=	${BINDIR}/opiekey ${BINDIR}/otp-md4
 LINKS+=	${BINDIR}/opiekey ${BINDIR}/otp-md5
