--- a/usr.bin/printf/Makefile
+++ b/usr.bin/printf/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/printf/Makefile 264996 2014-04-27 01:15:10Z jmmv $
+# $FreeBSD: stable/11/usr.bin/printf/Makefile 265420 2014-05-06 04:22:01Z imp $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	printf
 
