--- a/usr.bin/rup/Makefile
+++ b/usr.bin/rup/Makefile
@@ -1,10 +1,8 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/rup/Makefile 284064 2015-06-06 12:41:25Z bapt $
 
 PROG=	rup
 
-WARNS?=	1
-
-DPADD=	${LIBRPCSVC}
-LDADD=	-lrpcsvc
+WARNS?=	3
+LIBADD=	rpcsvc
 
 .include <bsd.prog.mk>
