--- a/usr.bin/script/Makefile
+++ b/usr.bin/script/Makefile
@@ -1,8 +1,8 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/script/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	script
-LDADD=	-lutil
-DPADD=	${LIBUTIL}
+
+LIBADD=	util
 
 .include <bsd.prog.mk>
