--- a/usr.bin/sed/Makefile
+++ b/usr.bin/sed/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/sed/Makefile 264996 2014-04-27 01:15:10Z jmmv $
+# $FreeBSD: stable/11/usr.bin/sed/Makefile 276837 2015-01-08 17:23:59Z pfg $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	sed
 SRCS=	compile.c main.c misc.c process.c
