update a few more

--- a/usr.bin/smbutil/Makefile
+++ b/usr.bin/smbutil/Makefile
@@ -1,12 +1,11 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/smbutil/Makefile 319186 2017-05-30 04:27:05Z ngie $
 
 PROG=	smbutil
 SRCS=	smbutil.c dumptree.c login.c lookup.c view.c print.c
 
-DPADD=	${LIBSMB} ${LIBKICONV}
-LDADD=	-lsmb -lkiconv
+LIBADD=	smb
 
-CONTRIBDIR=	${.CURDIR}/../../contrib/smbfs
+CONTRIBDIR=	${SRCTOP}/contrib/smbfs
 CFLAGS+=	-I${CONTRIBDIR}/include
 
 WARNS?=	0
