--- a/usr.bin/sockstat/Makefile
+++ b/usr.bin/sockstat/Makefile
@@ -1,6 +1,7 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/sockstat/Makefile 201386 2010-01-02 10:27:05Z ed $
+# $FreeBSD: stable/11/usr.bin/sockstat/Makefile 336040 2018-07-06 19:10:11Z jamie $
 
 PROG=		sockstat
+
+LIBADD=		jail
 
 .include <bsd.prog.mk>
