--- a/usr.bin/split/Makefile
+++ b/usr.bin/split/Makefile
@@ -1,6 +1,8 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/split/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	split
+
+LIBADD=	util
 
 .include <bsd.prog.mk>
