update sqlite3 build

--- a/usr.bin/sqlite3/Makefile
+++ b/usr.bin/sqlite3/Makefile
@@ -1,18 +1,16 @@
 # $MidnigtBSD: src/usr.bin/telnet/Makefile,v 1.28 2005/06/10 06:12:51 des Exp $
 
-SQLITEDIR=	${.CURDIR}/../../contrib/sqlite3
+SQLITEDIR=	${SRCTOP}/contrib/sqlite3
 .PATH:		${SQLITEDIR}
 
 CFLAGS+=	-DHAVE_READLINE=1 -DSQLITE_ENABLE_FTS3
 
 WARNS?=		0
 
-DPADD=		${LIBSQLITE3} ${LIBREADLINE}
-LDADD=		-lsqlite3 -lreadline
-
 PROG=		sqlite3
 
 SRCS=		shell.c
 		
+LIBADD+=	sqlite3 readline
 
 .include <bsd.prog.mk>
