--- a/usr.bin/atm/sscop/Makefile
+++ b/usr.bin/atm/sscop/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/atm/sscop/Makefile 314008 2017-02-21 02:24:31Z ngie $
+# $FreeBSD: stable/11/usr.bin/atm/sscop/Makefile 314009 2017-02-21 02:24:45Z ngie $
 
 CONTRIB= ${SRCTOP}/contrib/ngatm/sscop
 
@@ -9,7 +8,6 @@ PROG=	sscop
 SRCS=	common.c sscop_main.c
 CFLAGS+= -I${CONTRIB} -DUSE_LIBBEGEMOT
 
-DPADD=	${LIBBEGEMOT} ${LIBNETGRAPH} ${LIBNGATM}
-LDADD=	-lbegemot -lnetgraph -lngatm
+LIBADD=	begemot ngatm
 
 .include <bsd.prog.mk>
