--- a/usr.bin/bluetooth/rfcomm_sppd/Makefile
+++ b/usr.bin/bluetooth/rfcomm_sppd/Makefile
@@ -1,12 +1,10 @@
-# $MidnightBSD$
 # $Id: Makefile,v 1.7 2003/09/07 18:15:55 max Exp $
-# $FreeBSD: stable/10/usr.bin/bluetooth/rfcomm_sppd/Makefile 274182 2014-11-06 16:32:00Z emax $
+# $FreeBSD: stable/11/usr.bin/bluetooth/rfcomm_sppd/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=		rfcomm_sppd
 SRCS=		rfcomm_sppd.c rfcomm_sdp.c
 WARNS?=		2
 
-DPADD=		${LIBBLUETOOTH} ${LIBSDP}
-LDADD=		-lbluetooth -lsdp -lutil
+LIBADD=		bluetooth sdp util
 
 .include <bsd.prog.mk>
