--- a/usr.bin/bluetooth/bthost/Makefile
+++ b/usr.bin/bluetooth/bthost/Makefile
@@ -1,10 +1,8 @@
-# $MidnightBSD$
 # $Id: Makefile,v 1.4 2003/08/14 20:07:13 max Exp $
-# $FreeBSD: stable/10/usr.bin/bluetooth/bthost/Makefile 201386 2010-01-02 10:27:05Z ed $
+# $FreeBSD: stable/11/usr.bin/bluetooth/bthost/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=		bthost
 
-DPADD=		${LIBBLUETOOTH}
-LDADD=		-lbluetooth 
+LIBADD=		bluetooth
 
 .include <bsd.prog.mk>
