--- a/usr.bin/bluetooth/btsockstat/Makefile
+++ b/usr.bin/bluetooth/btsockstat/Makefile
@@ -1,13 +1,11 @@
-# $MidnightBSD$
 # $Id: Makefile,v 1.7 2003/08/14 20:07:14 max Exp $
-# $FreeBSD: stable/10/usr.bin/bluetooth/btsockstat/Makefile 140941 2005-01-28 16:08:11Z ru $
+# $FreeBSD: stable/11/usr.bin/bluetooth/btsockstat/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=		btsockstat
 WARNS?=		2
 BINGRP=		kmem
 BINMODE=	2555
 
-DPADD=		${LIBBLUETOOTH} ${LIBKVM}
-LDADD=		-lbluetooth -lkvm
+LIBADD=		bluetooth kvm
 
 .include <bsd.prog.mk>
