--- a/usr.bin/clang/lli/Makefile
+++ b/usr.bin/clang/lli/Makefile
@@ -1,46 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/lli/Makefile 263508 2014-03-21 17:53:59Z dim $
+# $FreeBSD: stable/11/usr.bin/clang/lli/Makefile 344213 2019-02-16 15:57:29Z dim $
 
-.include <bsd.own.mk>
+PROG_CXX=	lli
 
-PROG_CXX=lli
+SRCDIR=		tools/lli
+SRCS+=		lli.cpp
 
-SRCDIR=	tools/lli
-SRCS=	lli.cpp \
-	RemoteMemoryManager.cpp \
-	RemoteTarget.cpp \
-	RemoteTargetExternal.cpp
+LIBADD+=	z
 
-LIBDEPS=llvmx86disassembler \
-	llvmx86asmparser \
-	llvmirreader \
-	llvmasmparser \
-	llvmbitreader \
-	llvmx86codegen \
-	llvmx86desc \
-	llvmx86info \
-	llvmx86instprinter \
-	llvmx86utils \
-	llvmselectiondag \
-	llvmasmprinter \
-	llvmmcparser \
-	llvminterpreter \
-	llvminstrumentation \
-	llvmmcjit \
-	llvmjit \
-	llvmcodegen \
-	llvmobjcarcopts \
-	llvmscalaropts \
-	llvminstcombine \
-	llvmtransformutils \
-	llvmipa \
-	llvmanalysis \
-	llvmruntimedyld \
-	llvmexecutionengine \
-	llvmtarget \
-	llvmmc \
-	llvmobject \
-	llvmcore \
-	llvmsupport
-
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
