--- a/usr.bin/clang/llvm-ar/Makefile
+++ b/usr.bin/clang/llvm-ar/Makefile
@@ -1,16 +1,12 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/llvm-ar/Makefile 263508 2014-03-21 17:53:59Z dim $
+# $FreeBSD: stable/11/usr.bin/clang/llvm-ar/Makefile 311934 2017-01-11 20:21:05Z dim $
 
-.include <bsd.own.mk>
+PROG_CXX=	llvm-ar
 
-PROG_CXX=llvm-ar
+SRCDIR=		tools/llvm-ar
+SRCS+=		llvm-ar.cpp
 
-SRCDIR=	tools/llvm-ar
-SRCS=	llvm-ar.cpp
+LIBADD+=	z
 
-LIBDEPS=llvmobject \
-	llvmbitreader \
-	llvmcore \
-	llvmsupport
+LINKS+=		${BINDIR}/llvm-ar ${BINDIR}/llvm-ranlib
 
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
