--- a/usr.bin/clang/llvm-bcanalyzer/Makefile
+++ b/usr.bin/clang/llvm-bcanalyzer/Makefile
@@ -1,15 +1,8 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/llvm-bcanalyzer/Makefile 249423 2013-04-12 17:57:40Z dim $
+# $FreeBSD: stable/11/usr.bin/clang/llvm-bcanalyzer/Makefile 331838 2018-03-31 11:38:16Z dim $
 
-.include <bsd.own.mk>
+PROG_CXX=	llvm-bcanalyzer
 
-PROG_CXX=llvm-bcanalyzer
+SRCDIR=		tools/llvm-bcanalyzer
+SRCS+=		llvm-bcanalyzer.cpp
 
-SRCDIR=	tools/llvm-bcanalyzer
-SRCS=	llvm-bcanalyzer.cpp
-
-LIBDEPS=llvmbitreader \
-	llvmcore \
-	llvmsupport
-
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
