--- a/usr.bin/clang/llvm-link/Makefile
+++ b/usr.bin/clang/llvm-link/Makefile
@@ -1,25 +1,8 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/llvm-link/Makefile 249423 2013-04-12 17:57:40Z dim $
+# $FreeBSD: stable/11/usr.bin/clang/llvm-link/Makefile 331838 2018-03-31 11:38:16Z dim $
 
-.include <bsd.own.mk>
+PROG_CXX=	llvm-link
 
-PROG_CXX=llvm-link
+SRCDIR=		tools/llvm-link
+SRCS+=		llvm-link.cpp
 
-SRCDIR=	tools/llvm-link
-SRCS=	llvm-link.cpp
-
-LIBDEPS=llvmirreader \
-	llvmasmparser \
-	llvmbitwriter \
-	llvmbitreader \
-	llvmlinker \
-	llvmtransformutils \
-	llvmipa \
-	llvmanalysis \
-	llvmtarget \
-	llvmmc \
-	llvmobject \
-	llvmcore \
-	llvmsupport
-
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
