--- a/usr.bin/clang/llvm-rtdyld/Makefile
+++ b/usr.bin/clang/llvm-rtdyld/Makefile
@@ -1,64 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/llvm-rtdyld/Makefile 276486 2014-12-31 23:25:37Z ngie $
+# $FreeBSD: stable/11/usr.bin/clang/llvm-rtdyld/Makefile 310618 2016-12-26 20:36:37Z dim $
 
+PROG_CXX=	llvm-rtdyld
 MAN=
-.include <bsd.own.mk>
 
-PROG_CXX=llvm-rtdyld
-DPADD=	${LIBZ}
-LDADD=	-lz
+SRCDIR=		tools/llvm-rtdyld
+SRCS+=		llvm-rtdyld.cpp
 
-SRCDIR=	tools/llvm-rtdyld
-SRCS=	llvm-rtdyld.cpp
+LIBADD+=	z
 
-LIBDEPS=llvmdebuginfo \
-	llvmjit \
-	llvmexecutionengine \
-	llvmruntimedyld \
-	llvmarmdisassembler \
-	llvmarmcodegen \
-	llvmarmasmparser \
-	llvmarmdesc \
-	llvmarminfo \
-	llvmarminstprinter \
-	llvmmipsdisassembler \
-	llvmmipscodegen \
-	llvmmipsasmparser \
-	llvmmipsdesc \
-	llvmmipsinfo \
-	llvmmipsinstprinter \
-	llvmpowerpccodegen \
-	llvmpowerpcasmparser \
-	llvmpowerpcdesc \
-	llvmpowerpcinfo \
-	llvmpowerpcinstprinter \
-	llvmsparcdisassembler \
-	llvmsparccodegen \
-	llvmsparcasmparser \
-	llvmsparcdesc \
-	llvmsparcinfo \
-	llvmsparcinstprinter \
-	llvmx86disassembler \
-	llvmx86asmparser \
-	llvmx86codegen \
-	llvmselectiondag \
-	llvmasmprinter \
-	llvmmcparser \
-	llvmcodegen \
-	llvmobjcarcopts \
-	llvmscalaropts \
-	llvminstcombine \
-	llvmtransformutils \
-	llvmipa \
-	llvmanalysis \
-	llvmx86desc \
-	llvmx86info \
-	llvmtarget \
-	llvmx86instprinter \
-	llvmmc \
-	llvmobject \
-	llvmx86utils \
-	llvmcore \
-	llvmsupport
-
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
