--- a/usr.bin/clang/opt/Makefile
+++ b/usr.bin/clang/opt/Makefile
@@ -1,68 +1,17 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/opt/Makefile 263763 2014-03-26 07:31:57Z dim $
+# $FreeBSD: stable/11/usr.bin/clang/opt/Makefile 344213 2019-02-16 15:57:29Z dim $
 
-.include <bsd.own.mk>
+PROG_CXX=	opt
 
-PROG_CXX=opt
+SRCDIR=		tools/opt
+SRCS+=		AnalysisWrappers.cpp
+SRCS+=		BreakpointPrinter.cpp
+SRCS+=		Debugify.cpp
+SRCS+=		GraphPrinters.cpp
+SRCS+=		NewPMDriver.cpp
+SRCS+=		PassPrinters.cpp
+SRCS+=		PrintSCC.cpp
+SRCS+=		opt.cpp
 
-SRCDIR=	tools/opt
-SRCS=	AnalysisWrappers.cpp \
-	GraphPrinters.cpp \
-	PrintSCC.cpp \
-	opt.cpp
+LIBADD+=	z
 
-TGHDRS=	Intrinsics
-LIBDEPS=llvmarmdisassembler \
-	llvmarmcodegen \
-	llvmarmasmparser \
-	llvmarmdesc \
-	llvmarminfo \
-	llvmarminstprinter \
-	llvmmipsdisassembler \
-	llvmmipscodegen \
-	llvmmipsasmparser \
-	llvmmipsdesc \
-	llvmmipsinfo \
-	llvmmipsinstprinter \
-	llvmpowerpccodegen \
-	llvmpowerpcasmparser \
-	llvmpowerpcdesc \
-	llvmpowerpcinfo \
-	llvmpowerpcinstprinter \
-	llvmsparcdisassembler \
-	llvmsparccodegen \
-	llvmsparcasmparser \
-	llvmsparcdesc \
-	llvmsparcinfo \
-	llvmsparcinstprinter \
-	llvmx86disassembler \
-	llvmx86asmparser \
-	llvmx86codegen \
-	llvmselectiondag \
-	llvmasmprinter \
-	llvmmcparser \
-	llvmcodegen \
-	llvmx86desc \
-	llvmx86info \
-	llvmx86instprinter \
-	llvmx86utils \
-	llvmipo \
-	llvmvectorize \
-	llvmobjcarcopts \
-	llvmscalaropts \
-	llvminstcombine \
-	llvminstrumentation \
-	llvmtransformutils \
-	llvmipa \
-	llvmanalysis \
-	llvmtarget \
-	llvmmc \
-	llvmobject \
-	llvmirreader \
-	llvmasmparser \
-	llvmbitwriter \
-	llvmbitreader \
-	llvmcore \
-	llvmsupport
-
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
