--- a/usr.bin/clang/Makefile
+++ b/usr.bin/clang/Makefile
@@ -1,32 +1,52 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/Makefile 264303 2014-04-09 18:16:58Z dim $
+# $FreeBSD: stable/11/usr.bin/clang/Makefile 350259 2019-07-23 20:31:54Z dim $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
-SUBDIR=	clang clang-tblgen tblgen
+SUBDIR+=	clang
+SUBDIR+=	clang-tblgen
+SUBDIR+=	llvm-tblgen
 
 .if !defined(TOOLS_PREFIX)
+SUBDIR+=	llvm-symbolizer
+
 .if ${MK_CLANG_EXTRAS} != "no"
-SUBDIR+=bugpoint \
-	llc \
-	lli \
-	llvm-ar \
-	llvm-as \
-	llvm-bcanalyzer \
-	llvm-diff \
-	llvm-dis \
-	llvm-extract \
-	llvm-link \
-	llvm-mc \
-	llvm-nm \
-	llvm-objdump \
-	llvm-rtdyld \
-	macho-dump \
-	opt
+SUBDIR+=	bugpoint
+SUBDIR+=	clang-format
+SUBDIR+=	llc
+SUBDIR+=	lli
+SUBDIR+=	llvm-ar
+SUBDIR+=	llvm-as
+SUBDIR+=	llvm-bcanalyzer
+SUBDIR+=	llvm-cxxdump
+SUBDIR+=	llvm-cxxfilt
+SUBDIR+=	llvm-diff
+SUBDIR+=	llvm-dis
+SUBDIR+=	llvm-dwarfdump
+SUBDIR+=	llvm-extract
+SUBDIR+=	llvm-link
+SUBDIR+=	llvm-lto
+SUBDIR+=	llvm-lto2
+SUBDIR+=	llvm-mc
+SUBDIR+=	llvm-mca
+SUBDIR+=	llvm-modextract
+SUBDIR+=	llvm-nm
+SUBDIR+=	llvm-objcopy
+SUBDIR+=	llvm-objdump
+SUBDIR+=	llvm-pdbutil
+SUBDIR+=	llvm-rtdyld
+SUBDIR+=	llvm-xray
+SUBDIR+=	opt
 .endif
 
+.if ${MK_LLD} != "no"
+SUBDIR+=	lld
+.endif
 .if ${MK_LLDB} != "no"
-SUBDIR+=lldb
+SUBDIR+=	lldb
+.endif
+.if ${MK_LLVM_COV} != "no"
+SUBDIR+=	llvm-cov
+SUBDIR+=	llvm-profdata
 .endif
 .endif # TOOLS_PREFIX
 
