--- a/usr.bin/clang/clang-tblgen/Makefile
+++ b/usr.bin/clang/clang-tblgen/Makefile
@@ -1,23 +1,19 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/clang/clang-tblgen/Makefile 276486 2014-12-31 23:25:37Z ngie $
+# $FreeBSD: stable/11/usr.bin/clang/clang-tblgen/Makefile 331838 2018-03-31 11:38:16Z dim $
 
+PROG_CXX=	clang-tblgen
 MAN=
-.include <bsd.own.mk>
 
-PROG_CXX=clang-tblgen
+SRCDIR=		tools/clang/utils/TableGen
+SRCS+=		ClangASTNodesEmitter.cpp
+SRCS+=		ClangAttrEmitter.cpp
+SRCS+=		ClangCommentCommandInfoEmitter.cpp
+SRCS+=		ClangCommentHTMLNamedCharacterReferenceEmitter.cpp
+SRCS+=		ClangCommentHTMLTagsEmitter.cpp
+SRCS+=		ClangDataCollectorsEmitter.cpp
+SRCS+=		ClangDiagnosticsEmitter.cpp
+SRCS+=		ClangOptionDocEmitter.cpp
+SRCS+=		ClangSACheckersEmitter.cpp
+SRCS+=		NeonEmitter.cpp
+SRCS+=		TableGen.cpp
 
-SRCDIR=	tools/clang/utils/TableGen
-SRCS=	ClangASTNodesEmitter.cpp \
-	ClangAttrEmitter.cpp \
-	ClangCommentCommandInfoEmitter.cpp \
-	ClangCommentHTMLNamedCharacterReferenceEmitter.cpp \
-	ClangCommentHTMLTagsEmitter.cpp \
-	ClangDiagnosticsEmitter.cpp \
-	ClangSACheckersEmitter.cpp \
-	NeonEmitter.cpp \
-	TableGen.cpp
-
-LIBDEPS=llvmtablegen \
-	llvmsupport
-
-.include "../clang.prog.mk"
+.include "../llvm.prog.mk"
