--- a/usr.sbin/cron/crontab/Makefile
+++ b/usr.sbin/cron/crontab/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/cron/crontab/Makefile 185040 2008-11-18 00:12:15Z matteo $
+# $FreeBSD: stable/11/usr.sbin/cron/crontab/Makefile 319119 2017-05-29 10:15:41Z ngie $
 
 BINDIR=	/usr/bin
 
@@ -11,9 +10,8 @@ PRECIOUSPROG=
 
 WARNS?=	3
 
-CFLAGS+= -I${.CURDIR}/../cron
+CFLAGS+= -I${.CURDIR:H}/cron
 
-DPADD=	${LIBCRON} ${LIBMD} ${LIBUTIL}
-LDADD=	${LIBCRON} -lmd -lutil
+LIBADD=	cron md util
 
 .include <bsd.prog.mk>
