--- a/usr.sbin/cron/lib/Makefile
+++ b/usr.sbin/cron/lib/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/cron/lib/Makefile 185042 2008-11-18 00:59:26Z matteo $
+# $FreeBSD: stable/11/usr.sbin/cron/lib/Makefile 319119 2017-05-29 10:15:41Z ngie $
 
 LIB=	cron
 INTERNALLIB=
@@ -7,7 +6,7 @@ SRCS= entry.c env.c misc.c
 
 WARNS?=	3
 
-CFLAGS+= -I${.CURDIR}/../cron
+CFLAGS+= -I${.CURDIR:H}/cron
 CFLAGS+= -DLOGIN_CAP -DPAM
 
 .include <bsd.lib.mk>
