--- a/usr.sbin/cron/cron/Makefile
+++ b/usr.sbin/cron/cron/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/cron/cron/Makefile 201390 2010-01-02 11:07:44Z ed $
+# $FreeBSD: stable/11/usr.sbin/cron/cron/Makefile 275054 2014-11-25 16:57:27Z bapt $
 
 PROG=	cron
 MAN=	cron.8
@@ -7,8 +6,7 @@ SRCS=	cron.c database.c do_command.c job.c user.c popen.c
 
 CFLAGS+= -DLOGIN_CAP -DPAM
 
-DPADD=	${LIBCRON} ${LIBPAM} ${LIBUTIL}
-LDADD=	${LIBCRON} ${MINUSLPAM} -lutil
+LIBADD=	cron pam util
 
 WARNS?=	2
 
