--- a/usr.sbin/fdcontrol/Makefile
+++ b/usr.sbin/fdcontrol/Makefile
@@ -1,11 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/fdcontrol/Makefile 201390 2010-01-02 11:07:44Z ed $
+# $FreeBSD: stable/11/usr.sbin/fdcontrol/Makefile 319119 2017-05-29 10:15:41Z ngie $
 
-.PATH: ${.CURDIR}/../fdread
+.PATH: ${.CURDIR:H}/fdread
 
 PROG=	fdcontrol
 SRCS=	fdcontrol.c fdutil.c
-CFLAGS+= -I${.CURDIR}/../fdread
+CFLAGS+= -I${.CURDIR:H}/fdread
 MAN=	fdcontrol.8
 
 .if ${MACHINE} == "pc98"
