--- a/usr.sbin/fdformat/Makefile
+++ b/usr.sbin/fdformat/Makefile
@@ -1,13 +1,12 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/fdformat/Makefile 326918 2017-12-17 06:00:49Z cy $
+# $FreeBSD: stable/11/usr.sbin/fdformat/Makefile 326918 2017-12-17 06:00:49Z cy $
 
-.PATH: ${.CURDIR}/../fdread
+.PATH: ${.CURDIR:H}/fdread
 
 PROG=	fdformat
 MAN=	fdformat.8
 SRCS=	fdformat.c fdutil.c
 
-CFLAGS+= -I${.CURDIR}/../fdread
+CFLAGS+= -I${.CURDIR:H}/fdread
 
 .if ${MACHINE} == "pc98"
 CFLAGS+= -DPC98
