--- a/usr.sbin/gpioctl/Makefile
+++ b/usr.sbin/gpioctl/Makefile
@@ -1,7 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/gpioctl/Makefile 213238 2010-09-28 03:28:20Z gonzo $
+# $FreeBSD: stable/11/usr.sbin/gpioctl/Makefile 319119 2017-05-29 10:15:41Z ngie $
 
 PROG=	gpioctl
 MAN=	gpioctl.8
+
+CFLAGS+= -I${SRCTOP}/lib/libgpio
+
+LIBADD=	gpio
 
 .include <bsd.prog.mk>
