--- a/usr.sbin/iostat/Makefile
+++ b/usr.sbin/iostat/Makefile
@@ -1,11 +1,9 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.sbin/iostat/Makefile 296995 2016-03-17 20:29:10Z asomers $
+# $FreeBSD: stable/11/usr.sbin/iostat/Makefile 295768 2016-02-18 20:08:01Z asomers $
 
 PROG=	iostat
 MAN=	iostat.8
 
-DPADD=	${LIBDEVSTAT} ${LIBKVM} ${LIBM}
-LDADD=	-ldevstat -lkvm -lm
+LIBADD=	devstat kvm m
 
 .include <bsd.prog.mk>
