--- a/usr.sbin/edquota/Makefile
+++ b/usr.sbin/edquota/Makefile
@@ -1,6 +1,5 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.sbin/edquota/Makefile 207736 2010-05-07 00:41:12Z mckusick $
+# $FreeBSD: stable/11/usr.sbin/edquota/Makefile 275054 2014-11-25 16:57:27Z bapt $
 
 PROG=	edquota
 MAN=	edquota.8
@@ -8,7 +7,6 @@ MAN=	edquota.8
 CSTD=	gnu99
 WARNS?=	4
 
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
+LIBADD=	util
 
 .include <bsd.prog.mk>
