--- a/usr.sbin/eeprom/Makefile
+++ b/usr.sbin/eeprom/Makefile
@@ -1,12 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/eeprom/Makefile 201390 2010-01-02 11:07:44Z ed $
+# $FreeBSD: stable/11/usr.sbin/eeprom/Makefile 319119 2017-05-29 10:15:41Z ngie $
 
-.PATH: ${.CURDIR}/../ofwdump
+.PATH: ${.CURDIR:H}/ofwdump
 
 PROG=	eeprom
 MAN=	eeprom.8
 MANSUBDIR= /sparc64
 SRCS=	eeprom.c ofw_options.c ofw_util.c
-CFLAGS+= -I${.CURDIR}/../ofwdump
+CFLAGS+= -I${.CURDIR:H}/ofwdump
 
 .include <bsd.prog.mk>
