--- a/usr.sbin/etcupdate/tests/Makefile
+++ b/usr.sbin/etcupdate/tests/Makefile
@@ -1,9 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/etcupdate/tests/Makefile 313488 2017-02-09 22:49:48Z ngie $
+# $FreeBSD: stable/11/usr.sbin/etcupdate/tests/Makefile 299094 2016-05-04 23:20:53Z ngie $
 
 PLAIN_TESTS_SH=
 .for test in	always_test \
 		conflicts_test \
+		fbsdid_test \
 		ignore_test \
 		preworld_test \
 		tests_test \
