--- a/usr.sbin/fifolog/Makefile.inc
+++ b/usr.sbin/fifolog/Makefile.inc
@@ -1,8 +1,3 @@
-# $MidnightBSD$
-
-LIBFIFOLOG= ${.OBJDIR}/../lib/libfifolog.a
-
-#LINT=	flint
-#LINTFLAGS= ${.CURDIR}/../flint.lnt -I/usr/include
+# $FreeBSD: stable/11/usr.sbin/fifolog/Makefile.inc 275218 2014-11-28 22:03:35Z bapt $
 
 .include "../Makefile.inc"
