--- a/usr.sbin/fifolog/lib/Makefile
+++ b/usr.sbin/fifolog/lib/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/fifolog/lib/Makefile 249657 2013-04-19 19:45:00Z ed $
+# $FreeBSD: stable/11/usr.sbin/fifolog/lib/Makefile 291735 2015-12-04 03:17:17Z bdrewery $
 
 LIB=	fifolog
 INTERNALLIB=	# API not published or supported.
@@ -8,6 +7,7 @@ SRCS=	fifolog_int.c fifolog_create.c fifolog_write_poll.c fifolog_reader.c
 SRCS+=	getdate.y
 
 CFLAGS+= -I${.CURDIR}
+LIBADD=	z
 
 NO_WMISSING_VARIABLE_DECLARATIONS=
 
