--- a/usr.sbin/gstat/Makefile
+++ b/usr.sbin/gstat/Makefile
@@ -1,9 +1,7 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/gstat/Makefile 273499 2014-10-23 00:43:08Z ngie $
+# $FreeBSD: stable/11/usr.sbin/gstat/Makefile 275054 2014-11-25 16:57:27Z bapt $
 
 PROG=	gstat
 MAN=	gstat.8
-DPADD=	${LIBDEVSTAT} ${LIBKVM} ${LIBGEOM} ${LIBBSDXML} ${LIBSBUF} ${LIBEDIT} ${LIBNCURSESW}
-LDADD=	-ldevstat -lkvm -lgeom -lbsdxml -lsbuf -ledit -lncursesw
+LIBADD=	devstat geom edit ncursesw
 
 .include <bsd.prog.mk>
