--- a/usr.sbin/extattr/Makefile
+++ b/usr.sbin/extattr/Makefile
@@ -1,12 +1,7 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/extattr/Makefile 301145 2016-06-01 17:22:15Z asomers $
-
-.include <bsd.own.mk>
-
 PROG=	rmextattr
 MAN=	rmextattr.8
 
-LDADD=	-lsbuf
+LIBADD=	sbuf
 
 LINKS+=	${BINDIR}/rmextattr ${BINDIR}/getextattr
 LINKS+=	${BINDIR}/rmextattr ${BINDIR}/setextattr
@@ -15,6 +10,8 @@ LINKS+=	${BINDIR}/rmextattr ${BINDIR}/lsextattr
 MLINKS+=	rmextattr.8 setextattr.8
 MLINKS+=	rmextattr.8 getextattr.8
 MLINKS+=	rmextattr.8 lsextattr.8
+
+.include <src.opts.mk>
 
 .if ${MK_TESTS} != "no"
 SUBDIR+=	tests
