--- a/usr.sbin/makefs/ffs/Makefile.inc
+++ b/usr.sbin/makefs/ffs/Makefile.inc
@@ -1,10 +1,9 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/usr.sbin/makefs/ffs/Makefile.inc 214921 2010-11-07 16:05:04Z cognet $
+#	$FreeBSD: stable/11/usr.sbin/makefs/ffs/Makefile.inc 330976 2018-03-15 09:04:23Z eadler $
 #
 
-.PATH:	${.CURDIR}/ffs ${.CURDIR}/../../sys/ufs/ffs
+.PATH:	${SRCDIR}/ffs ${SRCTOP}/sys/ufs/ffs
 
-CFLAGS+=	-I${.CURDIR}/../../sys/ufs/ffs
+CFLAGS+=	-I${SRCTOP}/sys/ufs/ffs
 
 SRCS+=	ffs_alloc.c ffs_balloc.c ffs_bswap.c ffs_subr.c ufs_bmap.c
 SRCS+=	buf.c mkfs.c
