--- a/usr.sbin/moused/Makefile
+++ b/usr.sbin/moused/Makefile
@@ -1,11 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/moused/Makefile 201390 2010-01-02 11:07:44Z ed $
+# $FreeBSD: stable/11/usr.sbin/moused/Makefile 275054 2014-11-25 16:57:27Z bapt $
 
 PROG=	moused
 MAN=	moused.8
 
-DPADD=	${LIBUTIL}  ${LIBM}
-LDADD=	-lutil -lm
+LIBADD=	m util
 
 #BINMODE=4555
 #PRECIOUSPROG=
