--- a/usr.sbin/bsdinstall/partedit/Makefile
+++ b/usr.sbin/bsdinstall/partedit/Makefile
@@ -1,13 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/bsdinstall/partedit/Makefile 291819 2015-12-04 19:16:56Z bdrewery $
+# $FreeBSD: stable/11/usr.sbin/bsdinstall/partedit/Makefile 319016 2017-05-28 00:13:44Z rgrimes $
 
 BINDIR= ${LIBEXECDIR}/bsdinstall
 PROG=	partedit
 LINKS= ${BINDIR}/partedit ${BINDIR}/autopart \
        ${BINDIR}/partedit ${BINDIR}/scriptedpart
-SYMLINKS= ${BINDIR}/partedit /usr/sbin/sade
-DPADD=	${LIBGEOM} ${LIBUTIL} ${LIBDIALOG} ${LIBM}
-LDADD=	-lgeom -lutil -ldialog -lm
+SYMLINKS= ../libexec/bsdinstall/partedit /usr/sbin/sade
+LIBADD+=	geom ncursesw util dialog m
 
 PARTEDIT_ARCH= ${MACHINE}
 .if ${MACHINE} == "i386" || ${MACHINE} == "amd64"
@@ -22,15 +20,5 @@ SRCS=	diskeditor.c partedit.c gpart_ops.c partedit_${PARTEDIT_ARCH}.c \
 
 WARNS?=	3
 MAN= sade.8
-
-.include <bsd.own.mk>
-
-.if ${MK_NCURSESW} == "no"
-DPADD+=	${LIBNCURSES}
-LDADD+=	-lncurses
-.else
-DPADD+=	${LIBNCURSESW}
-LDADD+=	-lncursesw
-.endif
 
 .include <bsd.prog.mk>
