--- a/usr.sbin/bsdinstall/Makefile
+++ b/usr.sbin/bsdinstall/Makefile
@@ -1,9 +1,7 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/bsdinstall/Makefile 289252 2015-10-13 18:56:50Z bdrewery $
-
 SUBDIR= distextract distfetch partedit scripts
 SUBDIR_PARALLEL=
 SCRIPTS= bsdinstall
 MAN= bsdinstall.8
+PACKAGE=	bsdinstall
 
 .include <bsd.prog.mk>
