--- a/usr.sbin/nscd/Makefile
+++ b/usr.sbin/nscd/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.sbin/nscd/Makefile 194098 2009-06-13 01:23:34Z des $
+# $FreeBSD: stable/11/usr.sbin/nscd/Makefile 275054 2014-11-25 16:57:27Z bapt $
 
 PROG=	nscd
 MAN=	nscd.conf.5 nscd.8
@@ -9,8 +8,8 @@ SRCS=	agent.c nscd.c nscdcli.c cachelib.c cacheplcs.c debug.c log.c \
 	config.c query.c mp_ws_query.c mp_rs_query.c singletons.c protocol.c \
 	parser.c
 CFLAGS+= -DCONFIG_PATH="\"${PREFIX}/etc/nscd.conf\""
-DPADD=	${LIBM} ${LIBPTHREAD} ${LIBUTIL}
-LDADD=	-lm -lpthread -lutil
+
+LIBADD=	util pthread
 
 .PATH: ${.CURDIR}/agents
 .include "${.CURDIR}/agents/Makefile.inc"
